--- a/youtube.html
+++ b/youtube.html
@@ -31,11 +31,13 @@
             height: 24px;
             width: 24px;
         }
+
         .profile-picture .icon {
             border-radius: 16px;
             height: 32px;
             width: 32px;
         }
+
         .nav-right {
             align-items: center;
         }
@@ -50,7 +52,7 @@
             flex-grow: 0;
             flex-shrink: 1;
             flex-basis: 728px;
-            
+
         }
 
         .border-box {
@@ -66,8 +68,9 @@
             display: grid;
             grid-template-columns: 1fr 400px;
         }
+
         .main-container {
-            padding: 16px 24px ;
+            padding: 16px 24px;
         }
 
 
@@ -77,17 +80,19 @@
         }
 
         .video {
-           width: 100%;
-           padding-top: 56.35%;
-           background: gold;
+            width: 100%;
+            padding-top: 56.35%;
+            background: gold;
         }
 
         .flex-grow-1 {
-            flex-grow:1;
+            flex-grow: 1;
         }
+
         .search-form {
             gap: 0em;
         }
+
         .search-button {
             flex-basis: 100px;
             min-height: 32px;
@@ -96,23 +101,26 @@
             justify-content: center;
             align-items: center;
         }
+
         /* .search-bar {
             min-height: 24px;
         } */
         .search-form .flex-container {
             position: relative;
         }
+
         .search-auto-complete {
-            position:absolute;
+            position: absolute;
             min-height: 50px;
             width: 100%;
-            top:40px;
+            top: 40px;
             border: 1px solid;
-            background-color:white ;
+            background-color: white;
             opacity: 0.5;
-            padding-top:16px;
+            padding-top: 16px;
             padding-bottom: 16px;
         }
+
         .search-auto-complete-item {
             border: 1px solid;
             min-height: 24px;
@@ -120,6 +128,7 @@
             justify-content: space-between;
             display: flex;
         }
+
         .video-desc {
             height: 100px;
             padding: 20px 0 8px 0;
@@ -131,7 +140,7 @@
             height: 40px;
             background-color: white;
             flex-shrink: 0;
-            flex-grow:0;
+            flex-grow: 0;
             flex-basis: 40px;
         }
 
@@ -140,26 +149,25 @@
             line-height: unset;
             text-align: start;
         }
-        
     </style>
 </head>
 
 <body>
-    <div class="header">
-        <div class="flex-container">
-            <div class="nav-item three-line">
-                <div class="icon"></div>
+    <div class="body-container" id="app">
+        <div class="header">
+            <div class="flex-container">
+                <div class="nav-item three-line">
+                    <div class="icon"></div>
+                </div>
+                <div class="nav-item logo">
+                    <div class="border-box ">YT Premium</div>
+                </div>
             </div>
-            <div class="nav-item logo">
-                <div class="border-box ">YT Premium</div>
-            </div>
-        </div>
-
-        <div class="nav-item search border-box">
-            <form class="flex-container search-form" action="">
-                <div class="flex-container flex-grow-1">
-                    <input type="text" class="search-bar flex-grow-1">
-                    <div class="search-auto-complete">
+            <div class="nav-item search border-box">
+                <form class="flex-container search-form" action="">
+                    <div class="flex-container flex-grow-1">
+                        <input type="text" class="search-bar flex-grow-1">
+                        <div class="search-auto-complete">
                             <div class="search-auto-complete-item">
                                 <div>apple</div>
                                 <div>remove</div>
@@ -172,69 +180,58 @@
                                 <div>cranberry</div>
                                 <div>remove</div>
                             </div>
+                        </div>
                     </div>
-                </div>
-                <div class="search-button">
+                    <div class="search-button">
+                        <div class="icon"></div>
+                    </div>
+                </form>
+            </div>
+            <div class="nav-right flex-container">
+                <div class="nav-item" id="upload">
                     <div class="icon"></div>
                 </div>
-            </form>
-        </div>
-        <div class="nav-right flex-container">
-            <div class="nav-item" id="upload">
-                <div class="icon"></div>
-            </div>
-            <div class="nav-item" id="other_apps">
-                <div class="icon"></div>
-            </div>
-            <div class="nav-item" id="bell">
-                <div class="icon"></div>
-            </div>
-            <div class="nav-item profile-picture">
-                <div class="icon"></div>
-            </div>
-        </div>
-    </div>
-
-    </div>
-    <div class="grid main-container">
-        <div class="video demo-box">video</div>
-        <div class="next demo-box">next</div>
-        <div class="panel demo-box">
-            <div class="video-desc">video desc</div>
-            <div class="channel-desc">channel desc</div>
-        </div>
-        <div class="video-comments demo-box flex-container flex-column">
-            <div class="flex-container flex-row">
-                <div class="comment-profile-pic"></div>
-                <div>
-                    <div> <b>user name</b></div>
-                    <div>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat temporibus atque voluptatem. Labore culpa id optio commodi perspiciatis asperiores aliquid excepturi eaque sequi in. Obcaecati ea fugit dolor omnis illum.</div>
+                <div class="nav-item" id="other_apps">
+                    <div class="icon"></div>
+                </div>
+                <div class="nav-item" id="bell">
+                    <div class="icon"></div>
+                </div>
+                <div class="nav-item profile-picture">
+                    <div class="icon"></div>
                 </div>
             </div>
-            <div class="flex-container flex-row">
-                <div class="comment-profile-pic"></div>
-                <div>
-                    <div> <b>user name</b></div>
-                    <div>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat temporibus atque voluptatem. Labore culpa id optio commodi perspiciatis asperiores aliquid excepturi eaque sequi in. Obcaecati ea fugit dolor omnis illum.</div>
-                </div>
+        </div>
+        <div class="grid main-container">
+            <div class="video demo-box">video</div>
+            <div class="next demo-box">next</div>
+            <div class="panel demo-box">
+                <div class="video-desc">video desc</div>
+                <div class="channel-desc">channel desc</div>
             </div>
-            <div class="flex-container flex-row">
-                <div class="comment-profile-pic"></div>
-                <div>
-                    <div> <b>user name</b></div>
-                    <div>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat temporibus atque voluptatem. Labore culpa id optio commodi perspiciatis asperiores aliquid excepturi eaque sequi in. Obcaecati ea fugit dolor omnis illum.</div>
-                </div>
-            </div>
-            <div class="flex-container flex-row">
-                <div class="comment-profile-pic"></div>
-                <div>
-                    <div> <b>user name</b></div>
-                    <div>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat temporibus atque voluptatem. Labore culpa id optio commodi perspiciatis asperiores aliquid excepturi eaque sequi in. Obcaecati ea fugit dolor omnis illum.</div>
+            <div class="video-comments demo-box flex-container flex-column">
+                <div class="flex-container flex-row" v-for="i in commentsNum">
+                    <div class="comment-profile-pic"></div>
+                    <div>
+                        <div> <b>John Doe {{i}}</b></div>
+                        <div>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat temporibus atque voluptatem.
+                            Labore culpa id optio commodi perspiciatis asperiores aliquid excepturi eaque sequi in.
+                            Obcaecati ea fugit dolor omnis illum.</div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script>
+        var app = new Vue({
+            el: '#app',
+            data: {
+                username: "John Doe",
+                commentsNum: 5,
+            }
+        });
+    </script>
 </body>
 
 </html>
