--- a/youtube.html
+++ b/youtube.html
@@ -24,6 +24,9 @@
             gap: 1em;
             padding-left: 24px;
             padding-right: 24px;
+            position: fixed;
+            top: 0px;
+            width: 100%;
         }
 
         .flex-container {
@@ -81,6 +84,7 @@
 
         .main-container {
             padding: 16px 24px;
+            margin-top: 56px;
         }
 
 
@@ -187,7 +191,7 @@
 
 
 
-        @media all and (max-width: 768px) {
+        @media all and (max-width: 1024px) {
             .grid {
                 grid-template-columns: 1fr;
                 gap: 12px;
