add to index the wechat

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 <body>
     <a href="youtube.html">Mock YouTube Page</a>
+    <a href="wechat-mac.html">Mock Wechat Mac Page</a>
     <a href="wikipedia-grid.html">Mock Wikipedia Page - grid model</a>
     <a href="wikipedia-flex.html">Mock Wikipedia Page - flex model</a>
 </body>
